@@ -1,0 +1,3 @@
+# sysctl system call has been deprecated.  It is provided for backward
+# compatility.  New target should override it (see x86_64/x32/sysctl.mk).
+sysctl = sysctl
